feat: add branch API endpoint to get all branch - GET /v1/branch
